# autoinvestigator

./: .env.example  GRADIO_UI_GUIDE.md  README.md  WEB_INTERFACE_README.md  gradio_ui.py  package.json  pyproject.toml  requirements.txt  run_web_app.py  server.py  template.py  test_server.py  test_ui.py
client/: __init__.py  agent.py  auth.py  config.py  main.py  models.py  pydantic_models.py  web_app.py
client/static/css/: investigate.css  landing.css
client/static/js/: investigate.js  landing.js
client/templates/: auth.html  investigate.html  landing.html  verify.html
instance/: autoinvestigator.db
server/: config.yaml  interface.py  tool_descriptor.py  yaml_loader.txt
server/prompts/: primary_prompts.py
server/resources/knowledge_base/: ticker.db
server/tools/: financial_data.py  gemini.py  mail_sender.py  news_aggregator.py  news_scanner.py  pdf_reader.py  sec_filings.py  sentiment_analyzer.py  string_to_json.py  ticker_manager.py  web_search.py
shared/: config.py
